Bug 312333 - Crash in Resource::~Resource
Summary: Crash in Resource::~Resource
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: libnepomukcore (other bugs)
Version First Reported In: 4.9
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Nepomuk Bugs Coordination
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-29 12:24 UTC by Lukáš Karas
Modified: 2013-06-03 13:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lukáš Karas 2012-12-29 12:24:03 UTC
Application: gwenview (2.9.2)
KDE Platform Version: 4.9.3
Qt Version: 4.8.3
Operating System: Linux 3.7.1 x86_64
Distribution: Ubuntu 12.10

-- Information about the crash:
- What I was doing when the application crashed:

I just close Gwenview and it crash. It appears sometimes and I don't know how reproduce. Nepumuk works correctly.

The crash can be reproduced some of the time.

-- Backtrace:
Application: Gwenview (gwenview), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fa66e67d780 (LWP 2388))]

Thread 2 (Thread 0x7fa658f8c700 (LWP 2396)):
#0  0x00007fa66b0ec303 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fa6678b3d84 in g_main_context_poll (n_fds=1, fds=0x7fa654002bb0, timeout=-1, context=0x7fa6540009a0, priority=<optimized out>) at /build/buildd/glib2.0-2.34.1/./glib/gmain.c:3584
#2  g_main_context_iterate (context=context@entry=0x7fa6540009a0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /build/buildd/glib2.0-2.34.1/./glib/gmain.c:3285
#3  0x00007fa6678b3ea4 in g_main_context_iteration (context=0x7fa6540009a0, may_block=1) at /build/buildd/glib2.0-2.34.1/./glib/gmain.c:3351
#4  0x00007fa66d50cc16 in QEventDispatcherGlib::processEvents (this=0x7fa6540008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#5  0x00007fa66d4dd2bf in QEventLoop::processEvents (this=this@entry=0x7fa658f8bdd0, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007fa66d4dd548 in QEventLoop::exec (this=0x7fa658f8bdd0, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007fa66d3deb10 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x00007fa66d4bd9af in QInotifyFileSystemWatcherEngine::run (this=0xdc9860) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007fa66d3e1aec in QThreadPrivate::start (arg=0xdc9860) at thread/qthread_unix.cpp:338
#10 0x00007fa667f76e9a in start_thread (arg=0x7fa658f8c700) at pthread_create.c:308
#11 0x00007fa66b0f7cbd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fa66e67d780 (LWP 2388)):
[KCrash Handler]
#6  0x00007fa66cece617 in lockInline (this=0xcb81c8) at /usr/include/qt4/QtCore/qmutex.h:187
#7  QMutexLocker (m=0xcb81c8, this=<synthetic pointer>) at /usr/include/qt4/QtCore/qmutex.h:109
#8  Nepomuk::Resource::~Resource (this=0x7fa644036b70, __in_chrg=<optimized out>) at ../../nepomuk/core/resource.cpp:142
#9  0x00007fa66cece8c9 in Nepomuk::Resource::~Resource (this=0x7fa644036b70, __in_chrg=<optimized out>) at ../../nepomuk/core/resource.cpp:147
#10 0x00007fa66d4ef1ca in QMetaCallEvent::~QMetaCallEvent (this=0x7fa64403ffc0, __in_chrg=<optimized out>) at kernel/qobject.cpp:509
#11 0x00007fa66d4ef239 in QMetaCallEvent::~QMetaCallEvent (this=0x7fa64403ffc0, __in_chrg=<optimized out>) at kernel/qobject.cpp:518
#12 0x00007fa66d4e1ac8 in QCoreApplicationPrivate::~QCoreApplicationPrivate (this=0xa88260, __in_chrg=<optimized out>) at kernel/qcoreapplication.cpp:449
#13 0x00007fa66bd4ee79 in QApplicationPrivate::~QApplicationPrivate (this=0xa88260, __in_chrg=<optimized out>) at kernel/qapplication.cpp:223
#14 0x00007fa66d4f4ffc in cleanup (pointer=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qscopedpointer.h:62
#15 ~QScopedPointer (this=0x7fffcc4ba198, __in_chrg=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qscopedpointer.h:100
#16 QObject::~QObject (this=0x7fffcc4ba190, __in_chrg=<optimized out>) at kernel/qobject.cpp:817
#17 0x00007fa66bd59211 in QApplication::~QApplication (this=0x7fffcc4ba190, __in_chrg=<optimized out>) at kernel/qapplication.cpp:1100
#18 0x00000000004273be in main (argc=6, argv=0x7fffcc4ba2f8) at ../../app/main.cpp:142

Reported using DrKonqi
Comment 1 Simeon Bird 2013-06-03 13:44:53 UTC
Git commit f43f15a0af40658489e0096f73d3bc649d71e13c by Simeon Bird.
Committed on 03/06/2013 at 01:04.
Pushed by sbird into branch 'master'.

Resource: Fix possible crashes in case Resources persist longer than
the ResourceManager.
FIXED-IN: 4.11
REVIEW: 110791

M  +25   -14   libnepomukcore/resource/resource.cpp

http://commits.kde.org/nepomuk-core/f43f15a0af40658489e0096f73d3bc649d71e13c