Resource: Fix possible crashes in case Resources persist longer than the ResourceManager.

BUG: 312333
FIXED-IN: 4.11
REVIEW: 110791